--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "numpy>=2.2.6",
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
 ]
